Version Next

    - Added PersistentObjectTransactionManager and @PersistentObjectTransactional
    - Added ProcessRunner.handleInterruption()
    - Added FieldBuilder.

Version 1.0.744 Released October 11, 2013

    - Moved CSVOutput from "string" to "io" sub-package
    - Extracted *Callback interfaces out of NullModem*Stream classes
      NOTE: the above are backward-incompatible changes.
    - Added ThreadLogger
    - Added "vaadin" sub-package of org.dellroad.stuff.pobj
    - Added @ProvidesProperty annotation and container constructor support
    - Added EnumContainer, EnumComboBox, and EnumUtil
    - Added new method Primitive.getDefaultValue()
    - Fixed bug in AbstractUnsizedContainer
    - Added new "pobj.distrib" package for multi-node synchronization
    - Added PersistentObject read() and write() method variants
    - Added WritableResource
    - Added AbstractBean

Version 1.0.704 Released August 28, 2013

    - Add GraphClonable and GraphCloneRegistry
    - Add subclass hooks for stdout and stderr in ProcessRunner
    - Update VaadinUtil.invoke{,Later} to use VaadinSession.access{Synchronously,}
    - Added RetryTransactionProvider implemented by RetryTransactionAspect
    - Translate UncategorizedDataAccessException's in RetryTransactionAspect
    - Add workaround for SPR-10815 to HibernateIsolationJpaDialect
    - Fixed bug in AbstractUnsizedContainer

Version 1.0.688 Released June 28, 2013

    - Added ThreadParkingLot.getParkedThreads()
    - Added @RetryTransaction and associated AOP aspect
    - Added PersistentObject read() and write() convenience methods
    - Added SpringVaadinSession.configureBean()
    - Added IdleTimeoutInputStream
    - Removed @PostCompletionSupport (use TransactionSynchronizationManager)
    - Update vaadin7 package to Vaadin 7.1.x (note: no longer works for 7.0.x)

Version 1.0.659 Released April 9, 2013

    - Added @Unique validation constraint and related classes