@@ -2,6 +2,7 @@ Version Next
 
     - Added PersistentObjectTransactionManager and @PersistentObjectTransactional
     - Added ProcessRunner.handleInterruption()
+    - Added SortingPropertyExtractor.
     - Added FieldBuilder.
 
 Version 1.0.744 Released October 11, 2013
